feat: swagger annotations for auth
